@@ -34,7 +34,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3wrap\f1 1 "November 6, 2013" "PJL TOOLS"
+.TH \f3wrap\f1 1 "November 9, 2013" "PJL TOOLS"
 .SH NAME
 wrap \- text reformatter
 .SH SYNOPSIS
@@ -101,6 +101,10 @@ presumed to be an
 .BR [nt]roff (1)
 control line,
 is not altered.
+.P
+Text is assumed to be encoded in UTF-8.
+All multi-byte, UTF-8-encoded characters
+are considered to have a width of 1.
 .SH OPTIONS
 An option argument
 .I f
