@@ -1,0 +1,2 @@
+This is a text file that contains some Unicode characters — ½ ⅓ ⅔ ¼ ¾ ⅕ ⅖ ⅗
+⅘ ⅛ ⅜ ⅝ ⅞ — encoded as UTF-8 for testing purposes.
