@@ -1,0 +1,1 @@
+/dev/null | -l78 | utf8-01.txt
